Fixed p alignment

--- a/css/tribute.css
+++ b/css/tribute.css
@@ -35,8 +35,6 @@ img {
 
 p {
   color: white;
-  padding-left: 175px;
-  padding-right: 175px;
 }
 
 a {
